# credit-risk-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements.txt.bak
.github/workflows/: cd.yml  ci.yml
notebooks/: data_ingestion.ipynb  exploratory_data_analysis.ipynb  feature_engineering.ipynb  model_selection.ipynb
results/: model_monitoring_report.html
src/: __init__.py  config.py  model_monitoring.py  predictor.py  preprocessing.py
src/api/: __init__.py  main.py  schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_model_monitoring.py  test_preprocessing.py  test_schemas.py
