[project]
name = "credit-risk-engine"
version = "1.0.0"
description = "A production-ready machine learning system to predict credit risk and loan default probability"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antonio Albaladejo", email = "antonioalbaladejo98@gmail.com"},
]
keywords = [
    "credit-risk",
    "machine-learning",
    "xgboost",
    "fastapi",
    "docker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "exceptiongroup==1.3.1",
    "fastapi==0.135.3",
    "uvicorn==0.46.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "numpy==2.2.6",
    "nvidia-nccl-cu12==2.29.7",
    "packaging",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "Pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2023.3",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "starlette==1.0.0",
    "threadpoolctl==3.6.0",
    "tomli==2.4.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2026.1",
    "xgboost==3.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pluggy==1.6.0",
]

[tool.uv.sources]
# Optional: specify package sources if needed for private repositories
# Example:
# my-package = { url = "https://github.com/user/repo/archive/main.zip" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:pytz"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
